@@ -39,6 +39,7 @@ nobase_include_HEADERS  = dolfin/dolfin_la.h \
 INCLUDES                = @KERNEL_CFLAGS@
 lib_LTLIBRARIES         = libdolfin-la.la
 libdolfin_la_la_SOURCES = GMRES.cpp \
+                          LU.cpp \
                           PETScEigenvalueSolver.cpp \
                           PETScKrylovMatrix.cpp \
                           PETScKrylovSolver.cpp \
