@@ -1,28 +1,43 @@
-// Copyright (C) 2006 Garth N. Wells.
+// Copyright (C) 2006 Anders Logg.
 // Licensed under the GNU GPL Version 2.
-//
-// First added:  2006-05-31
-// Last changed:
+// 
+// First added:  2006-08-16
+// Last changed: 2006-08-16
 
-#ifndef __LU_SOLVER_H
-#define __LU_SOLVER_H
+#ifndef __LU_H
+#define __LU_H
 
-#ifdef HAVE_PETSC_H
 #include <dolfin/PETScLUSolver.h>
-#endif
-
 #include <dolfin/uBlasLUSolver.h>
 
 namespace dolfin
 {
 
+  /// This class provides methods for solving a linear system by
+  /// LU factorization.
+  
+  class LU
+  {
+  public:
+
 #ifdef HAVE_PETSC_H
-  typedef PETScLUSolver LU;
-#else
-  typedef uBlasLUSolver LU;
+    
+    /// Solve linear system Ax = b
+    static void solve(const PETScMatrix& A, PETScVector& x, const PETScVector& b);
+
+    /// Solve linear system Ax = b
+    static void solve(const PETScKrylovMatrix& A, PETScVector& x, const PETScVector& b);
+
 #endif
+    
+    /// Solve linear system Ax = b
+    static void solve(const uBlasMatrix<ublas_dense_matrix>& A, uBlasVector& x, const uBlasVector& b);
+    
+    /// Solve linear system Ax = b
+    static void solve(const uBlasMatrix<ublas_sparse_matrix>& A, uBlasVector& x, const uBlasVector& b);
+
+  };
 
 }
-
 
 #endif
