@@ -11,7 +11,7 @@
 #include <dolfin/Matrix.h>
 #include <dolfin/Vector.h>
 #include <dolfin/KrylovSolver.h>
-#include <dolfin/LU.h>
+#include <dolfin/LUSolver.h>
 #include <dolfin/BilinearForm.h>
 #include <dolfin/LinearForm.h>
 #include <dolfin/Mesh.h>
@@ -76,7 +76,7 @@ dolfin::uint LinearPDE::solve(Function& u)
   // Solve the linear system
   if ( solver_type == "direct" )
   {
-    LU solver;
+    LUSolver solver;
     solver.set("parent", *this);
     solver.solve(*A, x, b);
   }
