@@ -1,7 +1,8 @@
+ - Collect static solvers in LU and GMRES
  - Bug fixes for Python interface PyDOLFIN
  - Enable use of direct solver for ODE solver (experimental)
  - Remove demo bistable
- - Cleanup linear algebra
+ - Restructure and cleanup linear algebra
  - Use UMFPACK for LU solver with uBlas matrix types
  - Add templated wrapper class for different uBlas matrix types
  - Add ILU preconditioning for uBlas matrices
